# clipper-highlights

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  compose.gpu.yaml  compose.yaml  config.example.yaml  justfile  pyproject.toml
src/clipper_highlights/: __main__.py  audio.py  candidates.py  cli.py  config.py  exporter.py  llm.py  models.py  pipeline.py  transcription.py
src/clipper_highlights/prompts/: rank_candidates.txt
tests/: test_audio_helpers.py  test_candidates.py  test_cli.py  test_config.py  test_exporter.py  test_llm.py  test_pipeline.py  test_transcription.py
